test/negative/parse_missing_end_func.mut
# Negative: missing 'end' to close function
def foo() -> i64
    return 42
